# lib_capacity

./: .gitignore  BookInfo-simple.yaml  BookInfo.yaml  README.md  app_req.py  app_req.yaml  app_req_demo.py  app_req_dev.py  app_req_test.py  capacity_registry.py  capacity_registry_demo.py  capacity_registry_demo_offer.py  capacity_registry_dev.py  edge-capacity.yaml  example.py  pyproject.toml  res_cap.py  res_cap.yaml  res_cap_demo.py  res_cap_test.py  stressng-and-resource.yaml  sztaki-capacity-flavor.yaml  sztaki-capacity-raw.yaml  test1.py  test2.py  test_cloud_basics.py  test_cloud_offers.py  test_edge_basics.py  test_edge_offers.py  test_tosca.py
app_req_test/: test1.yaml  test10.yaml  test11.yaml  test12.yaml  test13.yaml  test14.yaml  test15.yaml  test16.yaml  test17.yaml  test18.yaml  test19.yaml  test2.yaml  test20.yaml  test3.yaml  test4.yaml  test5.yaml  test6.yaml  test7.yaml  test8.yaml  test9.yaml
demo/: BookInfo-edge.yaml  aws-cdt.yaml  demo_cloud_basics_flavour.py  demo_edge_offers.py  sztaki-capacity-raw.yaml
swch_capreg/: __init__.py  app_req.py  capacity_registry.py  methods.py
tests/: BookInfo-simple.yaml  BookInfo.yaml  aws-cdt.yaml  conftest.py  sztaki-capacity-flavor.yaml  sztaki-capacity-raw.yaml  test_cloud_basics.py  test_cloud_basics_raw.py  test_cloud_offers.py  test_cloud_offers_flavour.py  test_edge_basics.py  test_edge_offers.py
tests/unit/: test_app_req.py  test_capacity_registry.py  test_res_cap.py
